[package]
name = "folded_sha256"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-r1cs-std = "0.5.0"
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe.git", package="folding-schemes" }
solidity-verifiers = { git = "https://github.com/privacy-scaling-explorations/sonobe.git", package="solidity-verifiers" }
ark-ff = "0.5.0"
ark-relations = "0.5.0"
serde_json = "1.0.114"
num-bigint = "0.4.3"
num-traits = "0.2.15"
hex = "0.4.3"
hex-literal = "0.4.1"
ark-bn254 = {version="0.5.0", features=["r1cs"]}
ark-grumpkin = {version="0.5.0", features=["r1cs"]}
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-poly-commit = "0.5.0"
ark-groth16 = "0.5.0"
generic-array = "0.14.6"
